tests/ui/cve_2021_27376/src/adjusted.inline.stderr
error: wrong assumption of layout compatibility from `std::net::SocketAddrV6` to `libc::sockaddr`
  --> tests/ui/cve_2021_27376/src/adjusted.rs:23:37
   |
LL |             SocketAddr::V6(addr) => Self::new_v6(addr),
   |                                     ^^^^^^^^^^^^^^^^^^ casted to `libc::sockaddr` here
   |
   = help: it's not guaranteed by Rust standard library. See https://github.com/rust-lang/rust/pull/78802
note: casted from this
  --> tests/ui/cve_2021_27376/src/adjusted.rs:23:37
   |
LL |             SocketAddr::V6(addr) => Self::new_v6(addr),
   |                                     ^^^^^^^^^^^^^^^^^^
   = note: `#[deny(rpl::wrong_assumption_of_layout_compatibility)]` on by default

error: wrong assumption of layout compatibility from `std::net::SocketAddrV4` to `libc::sockaddr`
  --> tests/ui/cve_2021_27376/src/adjusted.rs:21:37
   |
LL |             SocketAddr::V4(addr) => Self::new_v4(addr),
   |                                     ^^^^^^^^^^^^^^^^^^ casted to `libc::sockaddr` here
   |
   = help: it's not guaranteed by Rust standard library. See https://github.com/rust-lang/rust/pull/78802
note: casted from this
  --> tests/ui/cve_2021_27376/src/adjusted.rs:21:37
   |
LL |             SocketAddr::V4(addr) => Self::new_v4(addr),
   |                                     ^^^^^^^^^^^^^^^^^^

error: wrong assumption of layout compatibility from `std::net::SocketAddrV4` to `libc::sockaddr`
  --> tests/ui/cve_2021_27376/src/adjusted.rs:30:13
   |
LL |             addr as *const SocketAddrV4 as *const sockaddr,
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ casted to `libc::sockaddr` here
   |
   = help: it's not guaranteed by Rust standard library. See https://github.com/rust-lang/rust/pull/78802
note: casted from this
  --> tests/ui/cve_2021_27376/src/adjusted.rs:30:13
   |
LL |             addr as *const SocketAddrV4 as *const sockaddr,
   |             ^^^^

error: wrong assumption of layout compatibility from `std::net::SocketAddrV6` to `libc::sockaddr`
  --> tests/ui/cve_2021_27376/src/adjusted.rs:40:13
   |
LL |             addr as *const SocketAddrV6 as *const sockaddr,
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ casted to `libc::sockaddr` here
   |
   = help: it's not guaranteed by Rust standard library. See https://github.com/rust-lang/rust/pull/78802
note: casted from this
  --> tests/ui/cve_2021_27376/src/adjusted.rs:40:13
   |
LL |             addr as *const SocketAddrV6 as *const sockaddr,
   |             ^^^^

error: aborting due to 4 previous errors

